// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index.js changing a user's roles 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "query": "getUserQuery",
        "variables": {
          "id": "userId",
        },
      },
      "https://api.example.com/graphql",
    ],
    [
      {
        "query": "updateUserMutation",
        "variables": {
          "input": {
            "_version": 1,
            "id": "userId",
            "roles": [],
          },
        },
      },
      "https://api.example.com/graphql",
    ],
    [
      {
        "query": "updateUserMutation",
        "variables": {
          "input": {
            "_version": 2,
            "id": "userId",
            "roles": [
              "ADMIN",
              "RIDER",
              "USER",
            ],
          },
        },
      },
      "https://api.example.com/graphql",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`index.js changing a user's roles cognito failure and clean up 2`] = `
[MockFunction] {
  "calls": [
    [
      {
        "query": "getUserQuery",
        "variables": {
          "id": "userId",
        },
      },
      "https://api.example.com/graphql",
    ],
    [
      {
        "query": "updateUserMutation",
        "variables": {
          "input": {
            "_version": 1,
            "id": "userId",
            "roles": [],
          },
        },
      },
      "https://api.example.com/graphql",
    ],
    [
      {
        "query": "updateUserMutation",
        "variables": {
          "input": {
            "_version": 2,
            "id": "userId",
            "roles": [
              "ADMIN",
              "RIDER",
              "USER",
            ],
          },
        },
      },
      "https://api.example.com/graphql",
    ],
    [
      {
        "query": "updateUserMutation",
        "variables": {
          "input": {
            "_version": 1,
            "id": "userId",
            "roles": [],
          },
        },
      },
      "https://api.example.com/graphql",
    ],
    [
      {
        "query": "updateUserMutation",
        "variables": {
          "input": {
            "_version": 2,
            "id": "userId",
            "roles": [
              "USER",
            ],
          },
        },
      },
      "https://api.example.com/graphql",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`index.js changing a user's roles cognito failure and clean up 3`] = `
[MockFunction] {
  "calls": [
    [
      {
        "GroupName": "ADMIN",
        "UserPoolId": "somePoolId",
        "Username": "username",
      },
    ],
    [
      {
        "GroupName": "RIDER",
        "UserPoolId": "somePoolId",
        "Username": "username",
      },
    ],
    [
      {
        "GroupName": "USER",
        "UserPoolId": "somePoolId",
        "Username": "username",
      },
    ],
    [
      {
        "GroupName": "USER",
        "UserPoolId": "somePoolId",
        "Username": "username",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "promise": [Function],
      },
    },
    {
      "type": "return",
      "value": {
        "promise": [Function],
      },
    },
    {
      "type": "return",
      "value": {
        "promise": [Function],
      },
    },
    {
      "type": "return",
      "value": {
        "promise": [Function],
      },
    },
  ],
}
`;

exports[`index.js changing a user's roles cognito failure and clean up 4`] = `
[MockFunction] {
  "calls": [
    [
      {
        "GroupName": "COORDINATOR",
        "UserPoolId": "somePoolId",
        "Username": "username",
      },
    ],
    [
      {
        "GroupName": "ADMIN",
        "UserPoolId": "somePoolId",
        "Username": "username",
      },
    ],
    [
      {
        "GroupName": "COORDINATOR",
        "UserPoolId": "somePoolId",
        "Username": "username",
      },
    ],
    [
      {
        "GroupName": "RIDER",
        "UserPoolId": "somePoolId",
        "Username": "username",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "promise": [Function],
      },
    },
    {
      "type": "return",
      "value": {
        "promise": [Function],
      },
    },
    {
      "type": "return",
      "value": {
        "promise": [Function],
      },
    },
    {
      "type": "return",
      "value": {
        "promise": [Function],
      },
    },
  ],
}
`;

exports[`index.js changing a user's roles cognito failure and clean up 5`] = `
[MockFunction] {
  "calls": [
    [
      {
        "UserPoolId": "somePoolId",
        "Username": "username",
      },
    ],
    [
      {
        "UserPoolId": "somePoolId",
        "Username": "username",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "promise": [Function],
      },
    },
    {
      "type": "return",
      "value": {
        "promise": [Function],
      },
    },
  ],
}
`;
